--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
+    
     <h1>Question goes here!</h1>
 
 
 </body>
+<script src="script.js"></script>
 </html>
