Added five buttons, start and answers 1-4 buttons.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-    
-    <h1>Question goes here!</h1>
+    <div class="container">
+        <h1>Question goes here!</h1>
+        <button id="start"></button>
+        <button id="answer-1"></button>
+        <button id="answer-2"></button>
+        <button id="answer-3"></button>
+        <button id="answer-4"></button>
+
+    </div>
 
 
 </body>
