Added to html file with link to the style.css file.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Quizz</title>
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="container">
         <h1>Question goes here!</h1>
-        <button id="start"></button>
-        <button id="answer-1"></button>
-        <button id="answer-2"></button>
-        <button id="answer-3"></button>
-        <button id="answer-4"></button>
-
+        <button id="start">Start</button>
+        <button id="choice-1">1.</button>
+        <button id="choice-2">2.</button>
+        <button id="choice-3">3.</button>
+        <button id="choice-4">4.</button>
+        <button id="submit">Submit</button>
     </div>
 
 
