Coded random questions in js file and added a new class for question div in question.html file.

--- a/question.html
+++ b/question.html
@@ -8,17 +8,17 @@
     <title>Questions</title>
 </head>
 <body>
-    body>
+    <h2>Seconds left: </h2> <span>60</span>
     <div class="container">
-        <h1>Questions will go here</h1>
+        <div id= "questions">Questions will go here<div>
 
-        <button id="choice-1" data-number= "1">1.</button>
+        <button id="choice-1" class="choice-text" data-number= "1">1.</button>
    
-        <button id="choice-2" data-number= "2"> 2.</button>
+        <button id="choice-2" class="choice-text" data-number= "2"> 2.</button>
       
-        <button id="choice-3" data-number= "3">3.</button>
+        <button id="choice-3" class="choice-text" data-number= "3">3.</button>
       
-        <button id="choice-4" data-number= "4">4.</button>
+        <button id="choice-4" class="choice-text" data-number= "4">4.</button>
  
       </div>
     </div>
