--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Questions will go here</h1>
-
+        <h1>Test you knowledge here! </h1>
+        <p>Click on the start button to begin quiz. Timer will start once you hit the start button. </p>
         <button id="start">Start</button>
     
-        <button id="submit">Submit</button>
+
       </div>
     </div>
 
