added some function code, going to trouble shoot

--- a/question.html
+++ b/question.html
@@ -8,9 +8,11 @@
     <title>Questions</title>
 </head>
 <body>
-    <h2>Seconds left: </h2> <span>60</span>
     <div class="container">
-        <div id= "questions">Questions will go here<div>
+
+        <div id= "questions">
+            <h2>Questions will go here<h2>
+         <div>
 
         <button id="choice-1" class="choice-text" data-number= "1">1.</button>
    
@@ -19,7 +21,8 @@
         <button id="choice-3" class="choice-text" data-number= "3">3.</button>
       
         <button id="choice-4" class="choice-text" data-number= "4">4.</button>
- 
+            
+        <h4>Seconds left: </h4> <span>60</span>
       </div>
     </div>
 
