Added link when clicking the start button on index.html page.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="container">
         <h1>Test you knowledge here! </h1>
-        <p>Click on the start button to begin quiz. Timer will start once you hit the start button. </p>
+        <p>Click on the start button to begin quiz. Timer will start once you answer your first question. </p>
         <button id="start">Start</button>
-    
+
 
       </div>
     </div>
