trouble shooting codes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Test you knowledge here! </h1>
-        <p>Click on the start button to begin quiz. Timer will start once you answer your first question. </p>
+        <p>How well do you know javascript?Click on the start button to begin quiz. Timer will start once you answer your first question. </p>
         <button id="start">Start</button>
 
 
