--- a/question.html
+++ b/question.html
@@ -10,9 +10,7 @@
 <body>
     <div class="container">
 
-        <div id= "questions">
-            <h2>Questions will go here<h2>
-         <div>
+        <div id="questions">Questions goes here!</div>
 
         <button id="choice-1" class="choice-text" data-number= "1">1.</button>
    
@@ -22,8 +20,10 @@
       
         <button id="choice-4" class="choice-text" data-number= "4">4.</button>
             
-        <h4>Seconds left: </h4> <span>120</span>
-      </div>
+        <h3>Seconds left</h3><span id= "beginTime" >120</span> 
+
+        <div class= "score"> Score: 0</div>
+
     </div>
 
     <script src="script.js"></script>
